# Healio

./: .gitignore
.github/workflows/: deploy.yml
backend/: context.py  deploy.py  deploy.sh  me.txt  pyproject.toml  requirements.txt  resources.py  server.py
backend/data/: facts.json  summary.txt
frontend/: postcss.config.mjs  pyproject.toml
frontend/app/: globals.css
scripts/: frontend_update.sh
terraform/: main.tf  outputs.tf  variables.tf  versions.tf
